k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnetapi
  namespace: k8ssample
spec:
  selector:
    app: dotnetapi
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
